Bug 232482 - knode segfault on group switch
Summary: knode segfault on group switch
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Unspecified
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-28 17:07 UTC by Eckhart Wörner
Modified: 2010-05-23 16:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eckhart Wörner 2010-03-28 17:07:36 UTC
Version:            (using KDE 4.3.4)
Installed from:    Debian testing/unstable Packages

This bug has been copied over from http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=565193

----

Hi,

After clicking on "stop network" while a group is still being loaded
and switching to another group knode crashes.
Here's the backtrace:

Application: KNode (knode), signal: Segmentation fault
[KCrash Handler]
#6  0x00000000 in ?? ()
#7  0xb7433541 in KNJobData::cancel (this=0x95d74a0) at
../../knode/knjobdata.cpp:109
#8  0xb7431d11 in KNode::Scheduler::cancelJobs (this=0x8399018,
type=0, item=0x0) at ../../knode/scheduler.cpp:160
#9  0xb74c2757 in KNMainWidget::slotNetCancel (this=0x829e060) at
../../knode/knmainwidget.cpp:1971
#10 0xb74c4851 in KNMainWidget::qt_metacall (this=0x829e060,
_c=QMetaObject::InvokeMetaMethod, _id=85, _a=0xbfecf87c) at
./knmainwidget.moc:293
#11 0xb6c6f303 in QMetaObject::activate (sender=0x84eb078,
from_signal_index=5, to_signal_index=6, argv=0xbfecf87c) at
kernel/qobject.cpp:3112
#12 0xb6c6f720 in QMetaObject::activate (sender=0x84eb078,
m=0xb6af21c8, from_local_signal_index=1, to_local_signal_index=2,
argv=0xbfecf87c) at kernel/qobject.cpp:3206
#13 0xb6293591 in QAction::triggered (this=0x84eb078, _t1=false) at
.moc/release-shared/moc_qaction.cpp:236
#14 0xb6294adf in QAction::activate (this=0x84eb078,
event=QAction::Trigger) at kernel/qaction.cpp:1167
#15 0xb672d012 in QAction::trigger (this=0x861dc0c) at
../../include/QtGui/../../src/gui/kernel/qaction.h:203
#16 QToolButton::nextCheckState (this=0x861dc0c) at widgets/qtoolbutton.cpp:1135
#17 0xb6648543 in QAbstractButtonPrivate::click (this=0x859f840) at
widgets/qabstractbutton.cpp:525
#18 0xb6648816 in QAbstractButton::mouseReleaseEvent (this=0x8451fa0,
e=0xbfecff4c) at widgets/qabstractbutton.cpp:1115
#19 0xb672d50c in QToolButton::mouseReleaseEvent (this=0x8451fa0,
e=0xbfecff4c) at widgets/qtoolbutton.cpp:709
#20 0xb62ef9fb in QWidget::event (this=0x8451fa0, event=0xbfecff4c) at
kernel/qwidget.cpp:7554
#21 0xb66467fe in QAbstractButton::event (this=0x8451fa0,
e=0xbfecff4c) at widgets/qabstractbutton.cpp:1077
#22 0xb672feba in QToolButton::event (this=0x8451fa0,
event=0xbfecff4c) at widgets/qtoolbutton.cpp:1151
#23 0xb6299a94 in QApplicationPrivate::notify_helper (this=0x8154a70,
receiver=0x8451fa0, e=0xbfecff4c) at kernel/qapplication.cpp:4065
#24 0xb62a2551 in QApplication::notify (this=0xbfed17b4,
receiver=0x8451fa0, e=0xbfecff4c) at kernel/qapplication.cpp:3767
#25 0xb6f1f62d in KApplication::notify (this=0xbfed17b4,
receiver=0x8451fa0, event=0xbfecff4c) at
../../kdeui/kernel/kapplication.cpp:302
#26 0xb6c5a1eb in QCoreApplication::notifyInternal (this=0xbfed17b4,
receiver=0x8451fa0, event=0xbfecff4c) at
kernel/qcoreapplication.cpp:610
#27 0xb62a15de in QCoreApplication::sendSpontaneousEvent
(receiver=0x8451fa0, event=0xbfecff4c, alienWidget=0x8451fa0,
nativeWidget=0x856dfd8, buttonDown=0xb6b10580, lastMouseReceiver=...)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#28 QApplicationPrivate::sendMouseEvent (receiver=0x8451fa0,
event=0xbfecff4c, alienWidget=0x8451fa0, nativeWidget=0x856dfd8,
buttonDown=0xb6b10580, lastMouseReceiver=...)
    at kernel/qapplication.cpp:2924
#29 0xb6310175 in QETWidget::translateMouseEvent (this=0x856dfd8,
event=0xbfed14fc) at kernel/qapplication_x11.cpp:4411
#30 0xb630f646 in QApplication::x11ProcessEvent (this=0xbfed17b4,
event=0xbfed14fc) at kernel/qapplication_x11.cpp:3430
#31 0xb6339bc2 in x11EventSourceDispatch (s=0x8157840, callback=0,
user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#32 0xb48d7f28 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#33 0xb48db6b3 in ?? () from /lib/libglib-2.0.so.0
#34 0xb48db838 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#35 0xb6c85041 in QEventDispatcherGlib::processEvents (this=0x81346e8,
flags=...) at kernel/qeventdispatcher_glib.cpp:407
#36 0xb6339305 in QGuiEventDispatcherGlib::processEvents
(this=0x81346e8, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#37 0xb6c5883a in QEventLoop::processEvents (this=0xbfed1760,
flags=...) at kernel/qeventloop.cpp:149
#38 0xb6c58c82 in QEventLoop::exec (this=0xbfed1760, flags=...) at
kernel/qeventloop.cpp:201
#39 0xb6c5b0d9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#40 0xb6299917 in QApplication::exec () at kernel/qapplication.cpp:3525
#41 0x0804e93b in main (argc=1, argv=0xbfed18a4) at ../../knode/main.cpp:41

Cheers,
-- 
Raphael Geissert - Debian Developer
www.debian.org - get.debian.net
Comment 1 Olivier Trichet 2010-04-22 21:17:30 UTC
SVN commit 1117700 by otrichet:

Ensure that finished jobs (thus deleted job) are not use later.

Fix a bug where already finished job are kill() in cancelation.

BUG: 232482

 M  +0 -1      knjobdata.cpp  
 M  +2 -3      knjobdata.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1117700
Comment 2 Eckhart Wörner 2010-04-25 18:05:29 UTC
Will there be a backport for 4.4.3?
Comment 3 Olivier Trichet 2010-05-23 16:16:44 UTC
SVN commit 1129719 by otrichet:

backport to 4.4: Ensure that finished jobs (thus deleted job) are not use later.                                                                                                                                                             
                                                                                                                                                                                                                                             
Fix a bug where already finished job are kill() in cancelation.                                                                                                                                                                              
CCBUG: 232482


 M  +0 -1      knjobdata.cpp  
 M  +2 -3      knjobdata.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129719