Ensure that finished jobs (thus deleted job) are not use later.

Fix a bug where already finished job are kill() in cancelation.

BUG: 232482

svn path=/trunk/KDE/kdepim/knode/; revision=1117700